--- a/app/assets/stylesheets/admins/blogs.scss
+++ b/app/assets/stylesheets/admins/blogs.scss
@@ -1,3 +1,20 @@
-// Place all the styles related to the admins/blogs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+スタイリングの決まり
+・順番
+  位置を規定するもの
+  高さ・幅を規定するもの
+  色・形を規定するもの
+  他の要素との関係を示すもの
+*/
+h1 {
+  font-size: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.admin_header {
+  top: 0px;
+  width: 100%;
+  height: 70px;
+  background-color:#444;
+}
